--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,14 @@
     background-color: red;
 }
 
+#wrapper{
+    width: 100%;
+}
+
+#logo{
+    width:300px;
+    height:215px;
+    display: block;
+    margin: auto;
+}
+
